[package]
name = "dlt_parse"
version = "0.2.1"
authors = ["Julian Schmid <info@julianschmid.name>"]
edition = "2018"
description = "A library for parsing the \"Diagnostic Log and Trace\" network protocol (currently without payload interpretation)."
repository = "https://github.com/JulianSchmid/dlt-parse-rs"
categories = ["network-programming", "parser-implementations"]
keywords = ["dlt", "autosar"]
license = "BSD-3-Clause"
readme = "README.md"
exclude = [
    ".gitignore",
    ".travis.yml",
    ".gitlab-ci.yml",
    ".travis/*"
]

[dependencies]
byteorder = "1.3.2"

[dev-dependencies]
assert_matches = "1.3.0"
proptest = "0.9.4"

# for examples
etherparse = "0.8.2"
structopt = "0.2.18"
rpcap = "0.3.0"

[badges]
travis-ci = { repository = "JulianSchmid/dlt-parse-rs", branch = "master" }
codecov = { repository = "JulianSchmid/dlt-parse-rs", branch = "master", service = "github" }