[package]
name = "dlt_parse"
version = "0.3.0"
authors = ["Julian Schmid <info@julianschmid.name>"]
edition = "2018"
description = "A library for parsing the \"Diagnostic Log and Trace\" network protocol (currently without payload interpretation)."
repository = "https://github.com/JulianSchmid/dlt-parse-rs"
categories = ["network-programming", "parser-implementations"]
keywords = ["dlt", "autosar"]
license = "BSD-3-Clause"
readme = "README.md"
exclude = [
    ".gitignore",
    ".travis.yml",
    ".gitlab-ci.yml",
    ".travis/*"
]

[dependencies]

[dev-dependencies]
assert_matches = "1.5.0"
proptest = "1.0.0"

# for examples
etherparse = "0.9.0"
structopt = "0.3.22"
rpcap = "0.3.0"

[badges]
travis-ci = { repository = "JulianSchmid/dlt-parse-rs", branch = "master" }
codecov = { repository = "JulianSchmid/dlt-parse-rs", branch = "master", service = "github" }