[package]
name = "dlt_parse"
version = "0.8.0"
authors = ["Julian Schmid <info@julianschmid.name>"]
edition = "2021"
description = "A library for parsing the \"Diagnostic Log and Trace\" network protocol (currently without payload interpretation)."
repository = "https://github.com/JulianSchmid/dlt-parse-rs"
categories = ["network-programming", "parser-implementations", "no-std"]
keywords = ["dlt", "autosar"]
license = "MIT OR Apache-2.0"
readme = "README.md"
exclude = [
    ".gitignore",
    ".travis.yml",
    ".github/*",
    ".gitlab-ci.yml",
    ".travis/*",
    "appveyor.yml"
]

[features]
default = ["std"]
std = ["arrayvec/std"]

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
assert_matches = "1.5.0"
proptest = "1.0.0"
serde_json = { version = "1.0" }

# for examples
etherparse = "0.13.0"
structopt = "0.3.26"
rpcap = "1.0.0"

[[example]]
name = "pcap2dlt"
required-features = ["std"]

[[example]]
name = "print_dlt_file"
required-features = ["std"]
